db fixes + dark mode homogensation

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ All colors MUST be HSL.
     --popover-foreground: 210 17% 90%;
 
     --primary: 150 50% 45%;
-    --primary-foreground: 0 0% 100%;
+    --primary-foreground: 0 0% 0%;
 
     --secondary: 220 13% 16%;
     --secondary-foreground: 210 17% 90%;
